closing in on desired layout

--- a/index.html
+++ b/index.html
@@ -11,72 +11,60 @@
 <body>
   <div class="container screen">
     <div class="row">
-
-      <div class="container col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 task-box">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
       </div>
 
-      <div class="container col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 task-box">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
             <div class="col-12 task"></div>
       </div>
 
-      <div class="container col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 task-box">
-            <div class="col-12 task"></div>
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
       </div>
 
-      <div class="container col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 task-box">
-            <div class="col-12 task"></div>
-      </div>
-
-      <div class="container col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 task-box">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
       </div>
 
-      <div class="container col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 task-box">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
             <div class="col-12 task"></div>
       </div>
 
-      <div class="container col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 task-box">
-            <div class="col-12 task"></div>
-            <div class="col-12 task"></div>
-            <div class="col-12 task"></div>
-      </div>
-
-      <div class="container col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 task-box">
-            <div class="col-12 task"></div>
-      </div>
-
-      <div class="col-12 main-shelf"></div>
-
-      <div class="container col-s-12 col-md-6 col-lg-4 col-xl-2 task-box">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
       </div>
-
-      <div class="col-12 main-shelf"></div>
-
-      <div class="container col-s-12 col-md-6 col-lg-4 col-xl-2 task-box">
-            <div class="col-12 task"></div>
-      </div>
-
-      <div class="container col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 task-box">
-            <div class="col-12 task"></div>
-            <div class="col-12 task"></div>
-            <div class="col-12 task"></div>
-      </div>
-
-      <div class="container col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 task-box">
-            <div class="col-12 task"></div>
-      </div>
-
-      <div class="col-12 main-shelf"></div>
     </div>
+    <div class = "row main-shelf col-12"></div>
+  </div>
+  <div class="container screen">
+    <div class="row">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
+            <div class="col-12 task"></div>
+            <div class="col-12 task"></div>
+            <div class="col-12 task"></div>
+      </div>
+
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
+            <div class="col-12 task"></div>
+      </div>
+
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
+            <div class="col-12 task"></div>
+            <div class="col-12 task"></div>
+      </div>
+
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
+            <div class="col-12 task"></div>
+      </div>
+    </div>
+    <div class = "row main-shelf col-12"></div>
   </div>
 </body>
 </html>
