--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container screen">
-    <div class="row">
+    <div class="row" id="nowrap">
       <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
@@ -41,10 +41,10 @@
             <div class="col-12 task"></div>
       </div>
     </div>
-    <div class = "row main-shelf col-12"></div>
+    <div class = "row main-shelf col-12" id="nowrap"></div>
   </div>
   <div class="container screen">
-    <div class="row">
+    <div class="row" id="nowrap">
       <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
@@ -64,7 +64,7 @@
             <div class="col-12 task"></div>
       </div>
     </div>
-    <div class = "row main-shelf col-12"></div>
+    <div class = "row main-shelf col-12" id="nowrap"></div>
   </div>
 </body>
 </html>
