--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <div class="col-12 task"></div>
       </div>
     </div>
-    <div class = "row main-shelf col-12" id="nowrap"></div>
   </div>
+  <div class = "row main-shelf" id="nowrap"></div>
   <div class="container screen">
     <div class="row" id="nowrap">
       <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
@@ -64,8 +64,9 @@
             <div class="col-12 task"></div>
       </div>
     </div>
-    <div class = "row main-shelf col-12" id="nowrap"></div>
+
   </div>
+  <div class = "row main-shelf" id="nowrap"></div>
   <div class="container screen">
     <div class="row" id="nowrap">
       <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
@@ -98,7 +99,7 @@
             <div class="col-12 task"></div>
       </div>
     </div>
-    <div class = "row main-shelf col-12" id="nowrap"></div>
   </div>
+  <div class = "row main-shelf" id="nowrap"></div>
 </body>
 </html>
