taskboxes aligned as desired

--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
 <body>
   <div class="container screen">
     <div class="row" id="nowrap">
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
       </div>
 
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
             <div class="col-12 task"></div>
       </div>
 
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
-            <div class="col-12 task"></div>
-            <div class="col-12 task"></div>
-      </div>
-
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
-            <div class="col-12 task"></div>
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
       </div>
 
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
+            <div class="col-12 task"></div>
+            <div class="col-12 task"></div>
             <div class="col-12 task"></div>
       </div>
 
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end  task-box">
+            <div class="col-12 task"></div>
+      </div>
+
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end  task-box">
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
       </div>
@@ -45,56 +45,55 @@
   <div class = "row main-shelf" id="nowrap"></div>
   <div class="container screen">
     <div class="row" id="nowrap">
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
+            <div class="col-12 task"></div>
+            <div class="col-12 task"></div>
+      </div>
+
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
+            <div class="col-12 task"></div>
+      </div>
+
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
       </div>
 
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
-            <div class="col-12 task"></div>
-      </div>
-
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
-            <div class="col-12 task"></div>
-            <div class="col-12 task"></div>
-      </div>
-
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
             <div class="col-12 task"></div>
       </div>
     </div>
-
   </div>
   <div class = "row main-shelf" id="nowrap"></div>
   <div class="container screen">
     <div class="row" id="nowrap">
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
       </div>
 
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
             <div class="col-12 task"></div>
       </div>
 
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
-            <div class="col-12 task"></div>
-            <div class="col-12 task"></div>
-      </div>
-
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
-            <div class="col-12 task"></div>
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
       </div>
 
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
+            <div class="col-12 task"></div>
+            <div class="col-12 task"></div>
             <div class="col-12 task"></div>
       </div>
 
-      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 task-box">
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
+            <div class="col-12 task"></div>
+      </div>
+
+      <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
             <div class="col-12 task"></div>
             <div class="col-12 task"></div>
       </div>
