task box layout update

--- a/index.html
+++ b/index.html
@@ -12,8 +12,24 @@
   <div class="container screen">
     <div class="row" id="nowrap">
       <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
-            <div class="col-12 task"></div>
-            <div class="col-12 task"></div>
+            <div class="col-12 task">
+            </div>
+            <div class="col-12 ">
+                  <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="left" title="This will do B">B</button>
+                  <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="right" title="This will do N">N</button>
+            </div>
+            </div>
+            <div class="card">
+                  <img class="card-img-top"  data-toggle="tooltip" data-placement="top" title="Optional priority" src="colours.png" height="12px" width="50%" alt="priority picker">
+                  <div class="card-body" style="width: auto";>
+                              <p class="card-title id-text"  data-toggle="tooltip" data-placement="left" title="Hidden task ID" display="inline">#008</p>
+                              <p class="card-text task-text" data-toggle="tooltip" data-placement="bottom" title="Optional deadline" display="inline">ddmmyy</p>
+                        <p class="card-text col-12 task-text" data-toggle="tooltip" data-placement="bottom" title="Add task text">Task text of summat I need to do.</p>
+                        <a href="#" class="btn btn-primary" data-toggle="tooltip" data-placement="right" title="This will do D">D</a>
+                        <a href="#" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="Add task">A</a>
+                  </div>
+            </div>
             <div class="col-12 task"></div>
       </div>
 
