task layout update

--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
       <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
             <div class="col-12 task">
             </div>
-            <div class="col-12 ">
-                  <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                  <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="left" title="This will do B">B</button>
-                  <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="right" title="This will do N">N</button>
+
+            <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="This will add task B">B</button>
             </div>
-            </div>
+
             <div class="card">
                   <div class="card-body"  id="task-body" style="width: auto";>
                         <div class="row">
-                              <!--<h6 class="card-title col-12" id="id-text" data-toggle="tooltip" data-placement="left" title="Hidden task ID">#008</h6>-->
+                              <h6 class="card-title col-2" id="id-text" data-toggle="tooltip" data-placement="left" title="Tick/Untick to complete/uncomplete">T</h6>
+                              <h6 class="card-text id-text col-5" data-toggle="tooltip" data-placement="bottom" title="Optional deadline" display="inline">ddmmyy</h6>
+                              <a href="#" class="btn btn-primary col-5" data-toggle="tooltip" data-placement="right" title="This will do D">D</a>  
                               <p class="card-text col-12" id="task-text" data-toggle="tooltip" data-placement="bottom" title="Add task text">Task text of summat I need to do, but I'm not sure how long the text will be. Hopefully not too long, but I need it to cope, but not be too small.</p>               
                               <div class="col-12 ">
                                     <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
@@ -33,21 +34,25 @@
                                           <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="This will do 4">4</button>
                                           <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="This will do 5">5</button>
                                     </div>
-                              </div>
-                              <p class="card-text task-text col-12" data-toggle="tooltip" data-placement="bottom" title="Optional deadline" display="inline">ddmmyy</p>
-                              <a href="#" class="btn btn-primary col-6" data-toggle="tooltip" data-placement="bottom" title="Add task">A</a>
-                              <a href="#" class="btn btn-primary col-6" data-toggle="tooltip" data-placement="right" title="This will do D">D</a>                                                   
+                              </div>                                                
                         </div>
                   </div>
             </div>
+
+            <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-success" data-toggle="tooltip" data-placement="bottom" title="This will add task N">N</button>
+            </div>
+
             <div class="card">
                   <div class="card-body" id="task-body" style="width: auto";>
                         <div class="row">
-                              <!--<h6 class="card-title col-11" id="id-text" data-toggle="tooltip" data-placement="left" title="Hidden task ID">#008</h6>-->
+                              <h6 class="card-title col-2" id="id-text" data-toggle="tooltip" data-placement="left" title="Tick/Untick to complete/uncomplete">T</h6>
+                              <h6 class="card-text id-text col-6" data-toggle="tooltip" data-placement="bottom" title="Optional deadline" display="inline">ddmmyy</h6>
                               <p class="card-text col-12" id="task-text" data-toggle="tooltip" data-placement="bottom" title="Add task text">Task text of summat I need to do, but I'm not sure how long the text will be. Hopefully not too long, but not be too small.</p>                                                 
                         </div>
                   </div>
             </div>
+            <h2>1 Task(s)</h2>
       </div>
 
       <div class="container col-12 col-md-6 col-lg-4 col-xl-3 align-self-end task-box">
